# finds-you-jobs

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  UPSTREAMS.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-windows.yml  release.yml  repository-policy.yml
docs/: .gitignore
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: aa-onboarding.spec.ts  applier.spec.ts  board.spec.ts  boot.spec.ts  finder-prefs.spec.ts  networking.spec.ts  reconnect.spec.ts  settings-analytics.spec.ts  tracker.spec.ts  zz-reconnect.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  events.ts  index.ts  operations.ts  queries.ts  real.ts  schema.d.ts  types.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: ar.ts  de.ts  es.ts  fr.ts  hi.ts  it.ts  ja.ts  nl.ts  pl.ts  pt.ts  ru.ts  types.ts  zh.ts
frontend/src/i18n/locales/en/: analytics.ts  common.ts  index.ts  jobBoard.ts  networking.ts  onboarding.ts  popups.ts  settingsPage.ts  shell.ts  tracker.ts
frontend/src/popups/: ApplierPanel.tsx  GuidanceDialog.tsx  ReferralsModal.tsx  ResumeModal.tsx
frontend/src/shell/: ConfirmDialog.tsx  FilterRow.tsx  HeaderAddButton.tsx  InfoDot.tsx  LanguageSelect.tsx  Layout.tsx  LeftRail.tsx  Markdown.tsx  Modal.tsx  RescoreAiDialog.tsx  icons.tsx  openExternal.ts  theme.ts
frontend/src/surfaces/: Analytics.tsx  Dev.tsx  JobBoard.tsx  Networking.tsx  Onboarding.tsx  Placeholder.tsx  Settings.tsx  Tracker.tsx  jobFormat.ts
scripts/: codegen.mjs  dev-frontend.mjs  dev-web.mjs  dev.mjs  setup.ps1  setup.sh
sidecar/: _pyinstaller_entry.py  fyj-sidecar.spec
sidecar/app/: __init__.py  __main__.py  auth.py  documents.py  events.py  lifecycle.py  logging_setup.py  main.py  openapi_export.py  priority.py  prompt_overrides.py  security.py  seed.py  watchdog.py
sidecar/app/api/: __init__.py  browser.py  discovery.py  dto.py  engines.py  ingest.py  packet.py  routes.py
sidecar/app/db/: __init__.py  alembic.ini  base.py  database.py  ids.py  migrate.py  models.py  repos.py
sidecar/app/db/alembic/: env.py
sidecar/app/db/alembic/versions/: 20260716_5c01e8a4f2b7_core_operations.py  20260716_8d4a2b6c1e90_profile_and_engines.py  (+6 more)
sidecar/app/observability/: __init__.py  config.py  setup.py  sqlite_exporter.py
sidecar/app/registry/: __init__.py  apply_op.py  company_anchor.py  contact_sync_op.py  engine_config.py  engines.py  engines_http.py  linkedin_op.py  networker_ops.py  operations.py  pdf.py  persistence.py
sidecar/app/runner/: __init__.py  policy.py  runner.py
sidecar/app/scheduler/: __init__.py  planner.py  scheduler.py
sidecar/fixtures/jds/text/: J01-glean-backend-bangalore.md
sidecar/fixtures/master-resumes/: master_resume_1.md
sidecar/modules/_shared/: claude_engine.py  cli_engines.py  completion_retry.py  job_input.py  skill_md.py  writing_samples.py
sidecar/modules/coverletterer/: __main__.py  cover-letter-skill.md  coverletterer.py  engine.py  job_input.py  output_parse.py  prompt.py  types.py
sidecar/modules/networker/: __init__.py  __main__.py  draft-referral-skill.md  driver.py  engine.py  networker.py  output_parse.py  playbooks.py  prompt.py  types.py
sidecar/modules/networker/playbooks/: hm.md  leadership.md  other.md  peer.md  recruiter.md
sidecar/modules/profiler/: __init__.py  engine.py  profiler.py  types.py
sidecar/modules/scorer/: __main__.py  deterministic.py  engine.py  job_input.py  output_parse.py  prompt.py  score-job-skill.md  scorer.py  types.py
sidecar/modules/scraper/: __init__.py  __main__.py  canonical.py  config.py  filters.py  fingerprint.py  htmltext.py  http.py  portals.example.toml  probe.py  quality.py  salary.py  scraper.py  searchquery.py  types.py
sidecar/modules/scraper/adapters/: __init__.py  apify.py  arbeitnow.py  ashby.py  bamboohr.py  base.py  brave.py  breezy.py  greenhouse.py  hackernews.py  lever.py  linkedin_guest.py  personio.py  recruitee.py  remoteok.py  remotive.py  rss.py  smartrecruiters.py  teamtailor.py  themuse.py  workable.py  workday.py
sidecar/modules/scraper/registry/: README.md  __init__.py  portals-all.toml  portals-india.toml  portals-remote.toml
sidecar/modules/tailorer/: __init__.py  __main__.py  engine.py  job_input.py  output_parse.py  prompt.py  tailor-resume-skill.md  tailorer.py  types.py
sidecar/tests/: conftest.py
sidecar/tests/app/: conftest.py  test_api.py  test_api_a6.py  test_api_jobs.py  test_api_operations.py  test_api_profile.py  test_applications_vertical.py  test_apply_op.py  test_board_and_expiry.py  test_contact_sync_op.py  test_db_migration.py  test_deterministic_backfill.py  test_discovery_api.py  test_engines_api.py  test_engines_http.py  test_events.py  test_events_hub.py  test_handshake.py  test_ingest_api.py  test_integration_boot.py  test_linkedin_session_n4.py  test_manual_applications.py  test_networker_ops_n3.py  test_observability.py  test_parity_routes.py  test_priority.py  test_prompt_overrides.py  test_referral_candidates_recovery.py  test_repos.py  test_runner.py  test_runner_restart.py  test_scheduler.py  test_scoring_modes.py  test_security.py  test_watchdog.py
sidecar/tests/modules/coverletterer/: test_coverletterer.py
sidecar/tests/modules/networker/: fakes.py  test_networker_fake.py
sidecar/tests/modules/scorer/: test_deterministic.py  test_scorer.py
sidecar/tests/modules/scraper/: fakes.py  test_adapter_apify.py  test_adapter_brave.py  test_adapter_greenhouse.py  test_adapters_ats.py  test_adapters_ats_ported.py  test_adapters_boards.py  test_adapters_new.py  test_core.py  test_enrichment.py  test_fingerprint.py  test_parallel_scan.py  test_probe.py  test_salary.py  test_scan.py  test_search_sources.py
sidecar/tests/modules/shared/: test_cli_engines.py
sidecar/tests/modules/tailorer/: test_tailorer.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+20 files in other folders)
