[project]
name = "finds-you-jobs"
version = "0.5.1"
description = "Open-source AI job-search desktop tool"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Srinivas Ravi" }]
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    # Secrets-at-rest (NFR-SEC-01): `keyring` (MIT) holds the app's encryption
    # key in the OS keychain; `cryptography` (Apache-2.0/BSD, permissive)
    # provides Fernet for sealed BYOK keys. App-managed key-file fallback when
    # no keychain backend exists (the NFR's stated fallback).
    "keyring>=25",
    "cryptography>=43",
    # Browser automation for the Referral Outreach package's GPLv3 LinkedIn core
    # (Apache-2.0 Python client; the Chromium binary is fetched on first use,
    # never bundled). Also used by the Applier browser agent when it lands.
    "playwright>=1.48",
    "markdown-it-py>=4.2.0",
    # Observability (architecture §10): Logfire SDK for per-operation tracing
    # spans. Logfire itself is MIT; its OpenTelemetry deps are Apache-2.0 (both
    # permissive / AGPL-compatible). App-layer only — never imported by
    # `modules/` (the one-way rule). Spans persist to a local `logfire.sqlite`
    # via a custom OTel exporter; `send_to_logfire=False` means ZERO network
    # calls by default (NFR-OBS-01). OTLP export is opt-in only.
    "logfire>=3.0",
    "pypdf>=5",
    "python-multipart>=0.0.32",
]

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.logfire]
# Observability is configured explicitly at app startup (observability/setup.py)
# with send_to_logfire=False — a purely-local span pipeline, no network by
# default (NFR-OBS-01). The runner may emit spans before/without that config
# (isolated unit tests, boot-recovery), so suppress the "not configured" warning
# rather than let it spam those paths — the spans are simply no-ops there.
ignore_no_config = true

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    ".venv",
    "dist",
    "build",
    "frontend",
    # GPLv3 OpenOutreach-derived subtree — kept close to upstream style, not
    # linted to finds-you-jobs conventions (the facade at the package root IS
    # linted). See sidecar/packages/referral_outreach/provenance.md.
    "sidecar/packages/referral_outreach/upstream",
    # AGPL Skyvern-derived observation subtree — carried close to upstream
    # style, not linted to finds-you-jobs conventions (the facade at the package
    # root IS linted). See sidecar/packages/jobapplier/provenance.md.
    "sidecar/packages/jobapplier/upstream",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.pyright]
include = ["sidecar"]
exclude = [
    "**/__pycache__",
    # GPLv3 vendored subtree — not typechecked to our standard (see ruff note).
    "sidecar/packages/referral_outreach/upstream",
]

[tool.pytest.ini_options]
testpaths = ["sidecar/tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
build = [
    "pyinstaller>=6.11",
]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.390",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
