[package]
name = "finds-you-jobs"
version = "0.5.1"
description = "finds-you-jobs desktop shell"
authors = ["Srinivas Ravi"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

# The library the binary calls into — keeps `main.rs` a one-liner and lets the
# lifecycle logic be a normal Rust module (also how Tauri's mobile targets link).
[lib]
name = "finds_you_jobs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP for the /healthz poll + /shutdown POST over loopback. No TLS
# needed (the surface is plain http on 127.0.0.1), so tls features are off.
ureq = { version = "2", default-features = false }
# Native message box for the AM1 "backend failed to start" fatal dialog.
rfd = "0.15"

# Second-launch guard: a re-run (or a dev relaunch beside a surviving window)
# focuses the existing instance instead of opening a second app + sidecar.
tauri-plugin-single-instance = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS-only: set the dock / app-switcher icon at runtime so the finds-you-jobs
# logo shows during `pnpm tauri dev` (the unbundled debug binary doesn't carry
# the bundled .icns the way a packaged .app does).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[features]
# Kept for parity with the Tauri template; nothing custom yet.
default = []
